# memreusage-tracer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: FindLuaExec.cmake  FindPintool.cmake  testing.cmake
docker/: Dockerfile  build.sh
examples/: example_host.cpp  test.cpp
pintool/: CMakeLists.txt  Makefile.in  makefile  memtracer.cpp  region.cpp  region.hpp
tests/: read_trace.lua  runner.lua  utils.lua
tests/serial/: iterations.cpp  iterations.lua  iterations_host_reuse.cpp  iterations_host_reuse.lua  iterations_host_reuse_long.cpp  iterations_host_reuse_long.lua  single_function.cpp  single_function.lua  single_function_host.cpp  single_function_host.lua  single_function_host_reuse.cpp  single_function_host_reuse.lua  single_function_host_reuse.py  two_functions.cpp  two_functions.lua  two_functions_host_reuse.cpp  two_functions_host_reuse.lua
tools/: postprocessing.py  requirements.txt
